# crewai-similar-framework-finder-template

./: README.md  consultation_recommendations.md  pyproject.toml
src/similar_framework_finder_template/: crew.py  main.py
src/similar_framework_finder_template/config/: agents.yaml  tasks.yaml
